# podiceps-auritus

./: .gitignore  .gitmodules  Cargo.toml  tasks.md
algorithms/: Cargo.toml
algorithms/src/: cell.rs  lib.rs  lines.rs
confidence_stats/: Cargo.toml
confidence_stats/src/: lib.rs
data/src/: errors.rs
data/src/loaders/: database.rs
etl/: AISdata  AISdata_vortex  Cargo.toml
etl/src/: main.rs  new_db.rs  render.rs  update_db.rs  update_ddm.rs
etl/src/sql/: schema.parquet
etl/src/sql/migration/: 00init.sql  01trajectories.sql  01views.sql  02confidence_interval.sql  03draught_by_vessel.sql  04draught_len_regression.sql  05confidence_by_vessel_type.sql  05draught_len_regression.sql  06within_confidence.sql  07faster_trajectory.sql  08histogram.sql  09dimension_and_trajectory_fix.sql  11render_score_normal.sql  11stddev.sql  12new_ais_data_schema.sql
fafo/: Cargo.toml
fafo/src/: confidence.rs  lib.rs  main.rs  util.rs  xyzcell.rs
ferruginous/: Cargo.toml  Makefile
ferruginous/src/: etl.rs  eval.rs  lib.rs  render.rs
linesonmaps/src/algo/: segmenter.rs  stop_cluster.rs
linesonmaps/src/types/: linestringm.rs  multipointm.rs  pointm.rs
modeling/src/: modeling.rs
resources/: mmsi245286000_surrogate4860673.txt
tileheater/src/: lib.rs  types.rs
tilerizer/: Cargo.toml
tilerizer/src/: lib.rs  tile3d.rs
