[package]
name = "etl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
duckdb = { workspace = true }
thiserror = { workspace = true }
linesonmaps = { workspace = true }
geo = { workspace = true }
rayon = { workspace = true }
sysinfo = "0.38.4"
r2d2 = { workspace = true }
wkb = { workspace = true }
geo-traits = { workspace = true }
algorithms = { workspace = true }
rstar = { workspace = true }

[lints]
workspace = true
