[package]
name = "ferruginous"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.10500.0", features = ["loadable-extension", "vscalar"]}
chrono = { workspace = true }
linesonmaps = { workspace = true }
geo = { workspace = true }
rust_decimal = { workspace = true }
itertools = { workspace = true }
tilerizer = { workspace = true }
modeling = { workspace = true }
fafo = { workspace = true }
rayon = { workspace = true }


[lints]
workspace = true
