[package]
name = "tilerizer"
version = "0.1.0"
edition = "2024"

[dependencies]
cached = "0.56.0"
itertools = "0.14.0"
linesonmaps = { workspace = true }
data = { workspace = true }
chrono = { workspace = true }
geo-types = { workspace = true }
modeling = { workspace = true }
rayon = { workspace = true }
geo = "0.31.0"

[dev-dependencies]
hex = "0.4.3"
wkb = "0.9.1"

[lints]
workspace = true
